[project]
name = "playlist-sync"
version = "0.1.0"
description = "Universal playlist syncer across streaming platforms"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.3",
    "httpx>=0.28.1",
    "musicbrainzngs>=0.7.1",
    "nicegui>=3.11.0",
    "openai>=2.32.0",
    "playwright>=1.58.0",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "rapidfuzz>=3.14.5",
    "rich>=15.0.0",
    "spotipy>=2.26.0",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.46.0",
    "ytmusicapi>=1.11.5",
]

[project.scripts]
playlist-sync = "playlist_sync.cli.app:cli"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=1.20.2",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.12",
]
